<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="button1_Text">Text</string>
    <string name="button2_Image">Image</string>
    <string name="button3_Web">Web</string>
    <string name="button4_Toast">Toast</string>
    <string name="button5_Dialog">Dialog</string>
    <string name="title_activity_display_text">My Message</string>
    <string name="title_activity_display_image">DisplayImageActivity</string>
</resources>
