<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"

    android:background="#F44336"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button1_Text"
        android:background="#424242"
        android:textColor="#00C853"
        android:onClick="displayText"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button2_Image"
        android:background="#424242"
        android:textColor="#00C853"
        android:onClick="displayImage"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button3_Web"
        android:background="#424242"
        android:textColor="#00C853"
        android:onClick="openWeb"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button4_Toast"
        android:background="#424242"
        android:textColor="#00C853"
        android:onClick="popToast"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button5_Dialog"
        android:background="#424242"
        android:textColor="#00C853"
        android:onClick="popDialog"/>
</LinearLayout>
